fix z-index

--- a/assets/style.css
+++ b/assets/style.css
@@ -100,11 +100,12 @@ a {
 	border-bottom: 1px solid #eee;
 } */
 #navbarResponsive {
-	z-index: 999;
+	z-index: 9;
 	position: absolute;
 	left: 50%;
 	top: 105px;
 	transform: translateX(-50%);
+	margin-bottom: .5rem;
 }
 .navbar-dark .navbar-nav .nav-item {
 	margin: 0px 15px;
@@ -242,6 +243,7 @@ a {
 	color: white;
 	border-radius: 2rem;
 	border: 1px solid darkgoldenrod;
+	z-index: 10;
 }
 
 .modal-header{
@@ -743,7 +745,7 @@ a {
 		display: none;
 	}
 	#navbarResponsive {
-	    z-index: 99999;
+	    z-index: 9;
 	    position: absolute;
 	    top: 96px;
 	    width: 100%;
